--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Aaina Aroda # Website name
-baseurl: 'https://aaxnaaroda.com/' # Website URL
+baseurl: 'https://aaxnaaroda.netlify.app/' # Website URL
 copyright: '© {2021} Rahul Jonnalagadda' # Footer text, e.g. '© {year} Me'
 
 ############################
